fix spacing on cta

--- a/style.css
+++ b/style.css
@@ -743,6 +743,10 @@ input:where([type="text"], [type="email"], ) {
   margin-block-end: var(--size-700);
 }
 
+.margin-top-900 {
+  margin-block-start: var(--size-900);
+}
+
 .mx-auto {
   margin-inline: auto;
 }
